# Musique_Tools

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
data/Artistes_Similaires_LastFM/: 2026_02_debug.csv  filtered_artists.csv
data/Artistes_Similaires_Spotify/: debug_selection.csv
data/Bibliotheque/: bibliotheque.csv  bibliotheque.xlsx
data/Historique_Spotify/: Streaming_History_Audio_2025-2026_17.json
data/Musique_Jeux_Video/: albums_khinsider.csv
data/Pipeline/: albums_a_rechercher_La_French.csv  albums_a_rechercher_Partage.csv  albums_a_rechercher_Zen.csv  albums_match_complet_La_French.csv  albums_match_complet_Partage.csv  albums_match_complet_Zen.csv  resultats_cotes_La_French.csv  resultats_cotes_Partage.csv  resultats_cotes_Zen.csv
data/Playlists_Spotify/: La_French.csv  Partage.csv  Titres_2017.csv  Titres_2018.csv  Titres_2019.csv  Titres_2020.csv  Titres_2021.csv  Titres_2022.csv  Titres_2023.csv  Titres_2024.csv  Titres_2025.csv  Zen.csv
data/Recommandation/: feedback.csv  sessions.csv
data/Ressources/: Albums_musique_2026_03.xlsx  Albums_musique_2026_04.xlsx  Albums_musique_2026_05.xlsx  artistes_liste.csv  recherches_effectuees.csv  recherches_effectuees.xlsx
data/Resultats/: resultats_final_La_French.csv  resultats_final_La_French.xlsx  resultats_final_Partage.csv  resultats_final_Partage.xlsx  (+2 more)
documentation/: A_Recuperer.md  Analyse.md  Artistes_Similaires_LastFM.md  Artistes_Similaires_Qobuz.md  Artistes_Similaires_Spotify.md  Musique_Jeux_Video.md  Priorisation.md  Recommandation.md
(+53 files in other folders)
